# slack_rection_to

./: README.md  config.yaml  main.py  pyproject.toml
